--- a/views/projects.pug
+++ b/views/projects.pug
@@ -11,5 +11,5 @@ block content
 					h3 #[a.text-white(href="https://github.com/cosmick9-org/projects") This page-let] #[sup #[i.fa-solid.fa-arrow-up-right-from-square(style="color: #ffffff; font-size: 0.5em;")]]
 					p This page-let is a simple page that displays a list of projects I've worked/am working on. It's written in Pug.JS, and uses Express.JS to serve the page. It uses NodeJS to run the server.
 				li
-					h3 5-7-5 Weather Bot
-					i Work in progress...
+					h3 #[a.text-white(href="https://github.com/cosmick9-org/757-bot") 757 Bot] #[sup #[i.fa-solid.fa-arrow-up-right-from-square(style="color: #ffffff; font-size: 0.5em;")]]
+					p 757 bot is a weather bot that posts to #[a(href="https://bark.lgbt/@cosmick9") Bark.LGBT] at 7:00 AM, 12:00 PM, and 7:00 PM. It's written in Node.JS ES6 and utilizes the OpenWeatherMap API to fetch the current temperature.
