CHANGE home.pug, projects.pug - Changed Mastodon link - Removed 7-5-7 bot from projects

--- a/views/home.pug
+++ b/views/home.pug
@@ -9,4 +9,4 @@ block content
 			h1= title
 			span.lead
 				| Welcome to my projects page-let! Here you can find a list of all my projects, and links to their GitHub repositories.
-				| If you have any questions, feel free to contact me on the Fediverse at #[a(rel="me" class="text-decoration-none" href="https://bark.lgbt/@cosmick9") @cosmick9@bark.lgbt]
+				| If you have any questions, feel free to contact me on the Fediverse at #[a(rel="me" class="text-decoration-none" href="https://bears.town/@cosmick9") @cosmick9@bears.town]
